--- a/PetCareISW.DataAccess/PetCareISW.DataAccess.csproj
+++ b/PetCareISW.DataAccess/PetCareISW.DataAccess.csproj
@@ -12,10 +12,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PetCareISW.DTO\PetCareISW.DTO.csproj" />
     <ProjectReference Include="..\PetCareISW.Entities\PetCareISW.Entities.csproj" />
   </ItemGroup>
 
