--- a/PetCareISW.Services/PetCareISW.Services.csproj
+++ b/PetCareISW.Services/PetCareISW.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="PerosonProfileRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
@@ -12,7 +16,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetCareISW.DataAccess\PetCareISW.DataAccess.csproj" />
+    <ProjectReference Include="..\PetCareISW.DTO\PetCareISW.DTO.csproj" />
+    <ProjectReference Include="..\PetCareISW.Entities\PetCareISW.Entities.csproj" />
   </ItemGroup>
 
 </Project>
