--- a/PetCareISW/PetCareISW.csproj
+++ b/PetCareISW/PetCareISW.csproj
@@ -12,12 +12,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PetCareISW.DataAccess\PetCareISW.DataAccess.csproj" />
+    <ProjectReference Include="..\PetCareISW.DTO\PetCareISW.DTO.csproj" />
+    <ProjectReference Include="..\PetCareISW.Entities\PetCareISW.Entities.csproj" />
+    <ProjectReference Include="..\PetCareISW.Services\PetCareISW.Services.csproj" />
   </ItemGroup>
 
 </Project>
