Controllers, dtos, daos y service de Business

--- a/PetCareISW/PetCareISW.csproj
+++ b/PetCareISW/PetCareISW.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
@@ -13,12 +14,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PetCareISW.DataAccess\PetCareISW.DataAccess.csproj" />
+    <ProjectReference Include="..\PetCareISW.DTO\PetCareISW.DTO.csproj" />
+    <ProjectReference Include="..\PetCareISW.Services\PetCareISW.Services.csproj" />
   </ItemGroup>
 
 </Project>
