--- a/PetCareISW/appsettings.json
+++ b/PetCareISW/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=WebApiPetCare;Integrated Security=True"
     // "DefaultConnection": "Server=u201715418.mysql.database.azure.com; Port=3306; Database=PetCareMobile; Uid=u201715418@u201715418; Pwd=Upc201715418; SslMode=Preferred;"
-    "DefaultConnection": "Server=localhost;userid=root;Password=root;Database=PetCareMobile4;"
-    // "DefaultConnection": "Server=bmzmz8tqsbzrbabzqbky-mysql.services.clever-cloud.com;userid=uasg086y6t1fw9vk;Password=ZoDsRtwM2JZwUfeLeNri;Database=bmzmz8tqsbzrbabzqbky;"
+    //"DefaultConnection": "Server=localhost;userid=root;Password=root;Database=PetCareMobile4;"
+     "DefaultConnection": "Server=bmzmz8tqsbzrbabzqbky-mysql.services.clever-cloud.com;userid=uasg086y6t1fw9vk;Password=ZoDsRtwM2JZwUfeLeNri;Database=bmzmz8tqsbzrbabzqbky;"
 
   },
   "AppSettings": {
